stuck on this.setstate

--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.10.4",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "pg": "^8.3.0",
     "sequelize": "^6.3.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-react": "^7.10.4",
     "axios": "^0.19.2",
+    "babel-loader": "^8.1.0",
     "nodemon": "^2.0.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
